[tool.poetry]
name = "py-zerox"
version = "0.0.5"
description = "ocr documents using vision models from all popular providers like OpenAI, Azure OpenAI, Anthropic, AWS Bedrock etc"
authors = ["wizenheimer","pradhyumna85"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pyzerox", from = "py_zerox" }]
repository = "https://github.com/getomni-ai/zerox.git"
documentation = "https://github.com/getomni-ai/zerox"
keywords = ["ocr", "document", "llm"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.0"
aiohttp = "^3.9.5"
pdf2image = "^1.17.0"
litellm = "^1.44.15"
aioshutil = "^1.5"
pypdf2 = "^3.0.1"

[tool.poetry.scripts]
pre-install = "py_zerox.scripts.pre_install:check_and_install"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"
black = "^24.4.2"
ruff = "^0.5.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
