[metadata]
name = zerox
version = 0.0.2
description = ocr documents using gpt-4o-mini
long_description = file: README.md
long_description_content_type = text/markdown
author = wizenheimer
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = py_zerox
packages = find:
python_requires = >=3.11
install_requires =
    aiofiles>=24.1.0
    aiohttp>=3.9.5
    pdf2image>=1.17.0

[options.packages.find]
where = py_zerox.zerox

[options.entry_points]
console_scripts =
    py-zerox-pre-install = py_zerox.scripts.pre_install:check_and_install