[metadata]
name = py-zerox
version = 0.0.6
description = ocr documents using vision models from all popular providers like OpenAI, Azure OpenAI, Anthropic, AWS Bedrock etc
long_description = file: README.md
long_description_content_type = text/markdown
author = wizenheimer, pradhyumna85
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = py_zerox
packages = find:
python_requires = >=3.11
install_requires =
    aiofiles>=23.0
    aiohttp>=3.9.5
    pdf2image>=1.17.0
    litellm>=1.44.15
    aioshutil>=1.5
    PyPDF2>=3.0.1

[options.packages.find]
where = py_zerox.pyzerox

[options.entry_points]
console_scripts =
    py-zerox-pre-install = py_zerox.scripts.pre_install:check_and_install